Updates in v0.6.3
NOISE
1. Removed ncomp in do_correlation(). Setup a warning message if old usage is used.
2. Change defaults for acorr_only and xcorr_only both to False in do_correlation().
3. Added option to stack in merging(). This option could replace do_stacking() if no
  rotation.
4. Updated extract_corrdata() to read "side" attribute if available.

DOWNLOADERS
1. Return inventory in get_event_waveforms()
2. Drop duplicates in get_sta_list() and fixed minor bug when channels might be skipped.
3. Change default region to globe in get_events()

UTILS
1. Added mag_duration(), modified from obspyDMT.utils.event_handler.py
2. Renamed qml_to_event_list() to qml2list(). Added option to convert to pandas dataframe.
3. Fixed a bug in slicing_trace(), where the index was float instead of integer.

PLOTTING
1. Added plot_eventsequence() to plot event with time.

TYPES
1. Added "side" attribute in CorrData() to mark whether the corrdata is two-sided or one-side only.
2. Revised CorrData.plot() to check "side" attribute when plotting.
3. Added copy() method in CorrData class to allow the user to copy the object, to avoid directly
  modifying the object values.
4. Added split() method in CorrData class to split the negative and positive sides of the data. This
  is needed when the user wants to analyze the two sides separately.

==================================================================================
==================================================================================
Updates in v0.6.2

PLOTTING
1. Added plot_stations() to plot seismic station map using GMT

2. Fixed minor bugs in plot_waveform()

3. Updated plot_corrfile() to take more options, more consistent with CorrData.plot()


DOWNLOADERS
1. Fixed bug in get_event_waveforms() where only one station was downloaded. now it downloads
all station data.

2. Return Stream() for waveform data.

UTILS
1. Added subsetindex()
2. Added points_in_polygon() and generate_points_in_polygon()